--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
+        "lib": [
+            "es6"
+        ],
         "module": "ESNext",
         "moduleResolution": "Node",
         "target": "ES2020",
