--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.3.0",
     "firebase": "^10.6.0",
+    "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^4.0.0",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-cookie": "^6.1.1",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tom-select": "^2.2.3",
     "web-vitals": "^2.1.4"
@@ -33,6 +36,7 @@
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE=./.cert/cert.pem SSL_KEY_FILE=./.cert/key.pem react-scripts start",
     "build": "react-scripts build",
+    "dev": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
